Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0
-
None
-
674dc3f73 (dev), d827bed6b (6.6), 7df34d498 (dev), bd6891b06 (tqtc/lts-6.5)
Description
Since we allow SetLookup on shadowable properties we get a problem if we use the value getting set again afterwards. See attached example:
Main.qml:10: (strict mode) Could not compile function chainTest: Cannot generate efficient code for incomparable types conversion to QVariant and double of Variable::value with type int
Attachments
Issue Links
- relates to
-
QTBUG-117789 QmlCompiler generates invalid code for unary operator+
- Closed